<resources>
    <string name="app_name">Prog-mobile-TP2</string>
    <string name="label_liste_capteurs">Liste des capteurs</string>
    <string name="label_detection_capteurs">Détection des capteurs</string>
    <string name="label_accelerometre">Accéléromètre</string>
    <string name="label_direction">Direction</string>
    <string name="label_secouer">Secouer</string>
    <string name="label_proximite">Proximité</string>
    <string name="label_geolocalisation">Géolocalisation</string>
    <string name="label_country_select">Sélection de pays</string>
    <string name="label_country_select_fragment">Sélection de pays (fragment)</string>
    <string name="lights_on">Lumière allumée</string>
    <string name="lights_off">Lumière éteinte</string>
    <string name="position">Position :</string>
    <string name="refresh_position">Rafraîchir la position</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="no_location">Position non trouvée</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>