<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_liste_capteurs"
        android:title="@string/label_liste_capteurs"/>
    <item
        android:id="@+id/menu_detection_capteurs"
        android:title="@string/label_detection_capteurs"/>
    <item
        android:id="@+id/menu_accelerometre"
        android:title="@string/label_accelerometre"/>
    <item
        android:id="@+id/menu_direction"
        android:title="@string/label_direction"/>
    <item
        android:id="@+id/menu_secouer"
        android:title="@string/label_secouer"/>
    <item
        android:id="@+id/menu_proximite"
        android:title="@string/label_proximite"/>
    <item
        android:id="@+id/menu_geolocalisation"
        android:title="@string/label_geolocalisation"/>
    <item
        android:id="@+id/menu_country_select"
        android:title="@string/label_country_select"/>
</menu>